--- a/views/index.html
+++ b/views/index.html
@@ -2,16 +2,18 @@
 
 
 
-<html>
-   <head>
-      <title>Timestamp Microservice | freeCodeCamp.org</title>
-      <link href="style.css" rel="stylesheet" type="text/css">
-   </head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Timestamp Microservice | freeCodeCamp.org</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
+  </head>
+  
 
-
-   <body>
+  <body>
     <h1>Timestamp Microservice</h1>
-
+    
     <hr/>
     
     <div class="container">
